# windisch

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: main.yml
conda/: meta.yaml
dev/: GenericWindTurbinePowerCurve.py  Power_curves.csv  average_cut_in_cut_out_speeds.csv  average_cutin_cutoff_speeds.xlsx  calibration.ipynb  create prospective LCA databases.ipynb  cutin_cutout_speed.py  cutin_cutout_speedV2.py  cutin_cutout_speedV3.py  cutin_cutout_speedV4.py  distance to coast.ipynb  electricity_production.ipynb  essai.ipynb  estimate_nacelle_mass.py  estimate_rotor_diameter.py  estimate_rotor_diameterV2.py  estimate_tower_mass.py  generate_power_curve.py  import wind turbines lci.ipynb  inventory_calculation.ipynb  power_curves_optimization.ipynb  power_curves_optimization.py  prospective_lca.ipynb  results_df.csv  sea_depth.ipynb  sizing.ipynb  verify_foundation_mass.py  verify_foundation_massV2  verify_foundation_massV2.py  verify_foundation_massV3.py  verify_hub_heightV2.py  verify_hub_height_oldparametercorrelation.py  verify_nacelle_mass.py  verify_nacelle_mass_newdata.py  verify_rotor_diameter.py  verify_rotor_mass.py  world_capacity factors.ipynb
dev/cache/: 55.602164360115104_12.491974627997108_terrain.nc
dev/extra data/: reformatted_power_curves.csv
docs/: code.rst  conf.py  index.rst  introduction.rst
docs/_templates/: custom-module-template.rst
examples/: Examples.ipynb
tests/: test_array.py  test_model.py  test_power_curve_model.py  test_update_inputs.py  test_wt_input_parameters.py
tests/fixtures/: default_test.json
windisch/: __init__.py  array.py  background_systems.py  cut_speeds.py  distance_to_coastline.py  estimate_rotor_diameter.py  export.py  inventory.py  model.py  power_curve.py  sea_depth.py  turbines_input_parameters.py  update_input_params.py  update_input_params.py.save  verify_foundation_mass.py  verify_hub_height.py  verify_nacelle_mass.py  verify_rotor_diameter.py  verify_rotor_mass.py  wind_array.py  wind_speed.py
(+57 files in other folders)
