
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windisch"  # Replace with actual name from setup.py if provided
version = "0.0.1"  # Replace with the version from setup.py if defined
description = "Parameterized LCA model for wind turbines"  # Replace with actual description from setup.py if defined
authors = [
    { name = "Romain Sacchi", email = "romain.sacchi@psi.ch" },
    { name = "Kalena Jonsson", email = "kjonsson@student.ethz.ch" },
]
license = { file = "LICENSE" }  # Ensure LICENSE file exists
readme = "README.md"  # Ensure README.md file exists

dependencies = ['bw2io', 'klausen', 'numpy', 'pandas', 'PyPrind', 'scipy', 'setuptools', 'stats_arrays', 'xarray', 'netcdf4', 'bottleneck', 'rasterio', 'geopandas']

[tool.setuptools.packages.find]
where = ["windisch"]  # Reflect that "windisch" contains the library's modules
